MiniIEC/MIEC.atg

/* MIEC.atg - Attributierte Grammatik f�r MiniIEC Compiler
 * Compiler Engineering, FH-O� Hagenberg
 * Phase 2: Symboltabelle und semantische Analyse
 */
 #include <iostream>
 #include <codecvt>
 #include <locale>
 #include "SymbolTable.h"

    SymbolTable mSymTab;

 // Helper Methode fuer Fehlermeldungen
 void SemError(const wchar_t* msg) {
     errors->Error(la->line, la->col, msg);
 }
COMPILER MIEC
CHARACTERS
letter = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz".
digit = "0123456789".
cr = '\r'.
lf = '\n'.
tab = '\t'.

TOKENS
ident = letter{ letter | digit | '_' }.
number = digit{ digit }.

COMMENTS FROM "(*" TO "*)"
IGNORE cr + lf + tab

PRODUCTIONS

/*--------------------------------------------------------------------------*/
MIEC
= "PROGRAM" ident(.mSymTab.ResetOffset(); .)
[VarDecl]
"BEGIN"
Statements
"END"
.

/*--------------------------------------------------------------------------*/
VarDecl
= "BEGIN_VAR"
VarDeclList
"END_VAR"
.

/*--------------------------------------------------------------------------*/
VarDeclList
= (.std::wstring name;
Type * type = nullptr; .)
ident(.name = t->val; .)
':'
"Integer"                                  (.type = mSymTab.GetIntType(); .)
';'                                        (. int offset = mSymTab.GetCurrentOffset();
if (!mSymTab.AddVar(std::string(name.begin(), name.end()), type, offset)) {
    SemError(L"Variable bereits deklariert");
}
else {
    mSymTab.IncreaseOffset(type->GetSize());
}
.)
{
    ident(.name = t->val; .)
        ':'
        "Integer"                                (.type = mSymTab.GetIntType(); .)
        ';'                                      (.offset = mSymTab.GetCurrentOffset();
    if (!mSymTab.AddVar(std::string(name.begin(), name.end()), type, offset)) {
        SemError(L"Variable bereits deklariert");
    }
    else {
        mSymTab.IncreaseOffset(type->GetSize());
    }
    .)
}
.

/*--------------------------------------------------------------------------*/
Statements
= { Stat }
.

/*--------------------------------------------------------------------------*/
Stat
= Assignment
| PrintStatement
| WhileStatement
| IfStatement
.

/*--------------------------------------------------------------------------*/
Assignment(.std::wstring name;
Type * exprType = nullptr; .)
= ident(.name = t->val;
std::string nameStr(name.begin(), name.end());
Symbol * sym = mSymTab.Find(nameStr);
if (sym == nullptr) {
    SemError(L"Variable nicht deklariert");
}
else if (dynamic_cast<VarSymbol*>(sym) == nullptr) {
    SemError(L"Nur Variablen k�nnen zugewiesen werden");
}
.)
":="
Expr<exprType>(. if (sym != nullptr && exprType != nullptr) {
    if (!sym->GetType()->IsCompatible(exprType)) {
        SemError(L"Typinkompatibilit�t bei Zuweisung");
    }
}
.)
';'
.

/*--------------------------------------------------------------------------*/
PrintStatement
= 
(. int startExpr = 0; .)
(. int endExpr = 0; .)
(. std::wstring_convert<std::codecvt_utf8<wchar_t>> conv; .)
"print" 
'(' 
(. startExpr = la->pos; .)
Expr 
(. endExpr = la->pos; .)
')' 
';'
(. std::cout << conv.to_bytes(scanner->buffer->GetString(startExpr, endExpr)) << std::endl; .)
.
/*--------------------------------------------------------------------------*/
WhileStatement(.Type * left = nullptr; Type * right = nullptr; .)
= "WHILE"
Condition < left, right>
"DO"
Statements
"END"
.

/*--------------------------------------------------------------------------*/
IfStatement(.Type * left = nullptr; Type * right = nullptr; .)
= "IF"
Condition < left, right>
"THEN"
Statements
["ELSE" Statements]
"END"
.

/*--------------------------------------------------------------------------*/
Expr<Type * &type>(.Type * termType = nullptr; .)
= Term<termType>(.type = termType; .)
{
    AddOp
        Term<termType>(. if (type != nullptr && termType != nullptr) {
        if (!type->IsCompatible(termType)) {
            SemError(L"Typinkompatibilit�t in Ausdruck");
        }
    }
    .)
}
.

/*--------------------------------------------------------------------------*/
Term<Type*& type>(.Type * factorType = nullptr; .)
= Factor<factorType>(.type = factorType; .)
{
    MulOp
        Factor<factorType>(. if (type != nullptr && factorType != nullptr) {
        if (!type->IsCompatible(factorType)) {
            SemError(L"Typinkompatibilit�t in Term");
        }
    }
    .)
}
.

/*--------------------------------------------------------------------------*/
Factor<Type*& type>(.std::wstring name;
type = nullptr; .)
= ident(.name = t->val;
std::string nameStr(name.begin(), name.end());
Symbol * sym = mSymTab.Find(nameStr);
if (sym == nullptr) {
    SemError(L"Identifier nicht deklariert");
}
else {
    type = sym->GetType();
}
.)
| number(.type = mSymTab.GetIntType(); .)
| '(' Expr < type> ')'
.

/*--------------------------------------------------------------------------*/
Condition<Type * &leftType, Type*& rightType>(.leftType = nullptr; rightType = nullptr; .)
= Expr<leftType>
Relop
Expr<rightType>(. if (leftType != nullptr && rightType != nullptr) {
    if (!leftType->IsCompatible(rightType)) {
        SemError(L"Typinkompatibilit�t in Bedingung");
    }
}
.)
.

/*--------------------------------------------------------------------------*/
Relop
= '='
| "<="
| ">="
| "!="
| '<'
| '>'
.

/*--------------------------------------------------------------------------*/
AddOp
= '+'
| '-'
.

/*--------------------------------------------------------------------------*/
MulOp
= '*'
| '/'
.

END MIEC.
